--- a/salinasc_objects2.html
+++ b/salinasc_objects2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title of page.</title>
-    </head>
+<title>My Top Five Favorite Movies - Assignment</title>
+   </head>
     <body>
-        <ol id="listID">
-        </ol>
-
-        <script src="salinasc_objects2.js"></script>
+	<h1>My Top Five Favorite Movies</h1>
+	<ol id="listID"></ol>
+	  <script src="salinasc_objects2.js"></script>
     </body>
 </html>
+	
